Updated Launch Screen with image and text.
- Updated the Navigation Bar Text to correct Application Name.
- Added 'ITSAppUsesNonExemptEncryption' to plist.

--- a/WeatherMap/Info.plist
+++ b/WeatherMap/Info.plist
@@ -19,7 +19,9 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>100</string>
+	<string>102</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MGLMapboxAccessToken</key>
